--- a/빅데이터 활용안.md
+++ b/빅데이터 활용안.md
@@ -8,23 +8,23 @@
 **1. 빅데이터 기술수준**
 
 * 저장 기술
-* 분석 기술: (이제 여기서부터가 기획부분에서 사용되죠)  
+* 분석 기술(이제 여기서부터가 기획부분에서 사용)  
     - 텍스트 마이닝  
     - 오피니언 마이닝  
     - 소셜 네트워크 분석  
     - 군집 분석  
 * 표현 기술  
     - R  
-    - 타블로 계피 팔론티어 등이 더 데이터 시각화에 적합할 겁니다
+    - 타블로 등이 더 데이터 시각화에 적합
 
-빅데이터는 로그데이터를 많이 이야기 합니다.  
-이 사람이 몇 시에 얼마나 접속하느냐 이런게 예전엔 중요하지 않았는데 지금은 중요해졌어요. 이걸 알아야 기획 구조전략을 짤 수 있는거죠.  
+빅데이터는 로그데이터를 많이 이야기  
+이 사람이 몇 시에 얼마나 접속하느냐 이런게 예전엔 중요하지 않았는데 지금은 중요 이걸 알아야 기획 구조전략을 짤 수 있다.  
 
 <아름다운 시각화>, <정보 디자인 교과서> 
 
 R로 분석을 마치고,  
 RDB(oracle, mySQL)을 거쳐야  
-최종단으로 데이터를 시각화하고 정용 가능합니다.
+최종단으로 데이터를 시각화하고 정용 가능.
 
 **2. 빅데이터 이용현황**
 
@@ -35,7 +35,7 @@ RDB(oracle, mySQL)을 거쳐야
 -대화형 응용프로그램, 실시간 스트림처리(사실 같은 겁니다 두 개가)  
 * 셀프서비스  
 -시각화, 스넵샷 형태의 분석시스템이 현재 대세에요.  
--마케팅 시물레이션을 돌려보고 내가 어떻게 해야할지 판단할 수 있는게 빅데이터의 큰 맥락이에요. 이게 대세가 될 겁니다.  
+-마케팅 시물레이션을 돌려보고 내가 어떻게 해야할지 판단할 수 있는게 빅데이터의 큰 맥락 
 * 데이터의 다양화, 시각화 분석 중요  
 -기계학습(머신러닝): 사람이 수작업으로 몇십만개 정보를 입력하는게 아니라 기계가 학습하게 하여 정보를 스스로 입력하게 하는 방식  
 -IoT데이터, 대화형 시스템
@@ -48,11 +48,8 @@ RDB(oracle, mySQL)을 거쳐야
     - 시멘틱 웹
     - 텍스트 마이닝
     - 상황인식 컴퓨팅
-
-포트폴리오 만들고, 자기소개서에 자기가 '이 분야에 빅데이터를 활용해서 이렇게 이러한 관점을 통해 학습하고 공부하고 준비했습니다'라고 어필해야 합니다
-
-    - 애플페이, 아마존Go: 물품에 표시된 바코드를 찍고 집기만 하면 자동 결제 되어 나가기만 하면 돼요.
-    - car sharing (소카): 사람들이 어디에서 렌트를 많이하고 어느 시간대에 많이 이용을 하는지.
+    - 애플페이, 아마존Go: 물품에 표시된 바코드를 찍고 집기만 하면 자동 결제 되어 나가기만 하면 된다.
+    - car sharing (소카): 사람들이 어디에서 렌트를 많이하고 어느 시간대에 많이 이용을 하는지
     - Home IoT
     - Deep Learning
     - 시각화 툴
@@ -60,12 +57,6 @@ RDB(oracle, mySQL)을 거쳐야
 * Conversational System
     - 챗봇
     - 음성인식
-    
--문과가 네이버 가고 싶으면 클로바서비스를 개선하는 것을 생각해보세요.  
--딜 메모를 써보세요. 그런걸 기업에게 어필해야 뽑아줍니다.
--KOSTA
--잡플래닛
--대기업 절대 혼자서는 취직 못한다.
 
 ---
 
@@ -80,9 +71,7 @@ veracity
 
 * 더 나은 의사결정
 * 사용자 중심의 서비스 활동
-* 창조적인 접근
-
-입사하실 때 이 세 가지를 중심으로 언급하시면 더 이상 빅데이터를 잘 설명할 수가 없죠.
+* 창조적인 접근  
 
 회사가 빅데이터를 사용해야 하는 이유  
 -고객 중심 성과  
@@ -90,8 +79,6 @@ veracity
 -신규사업모델 가능  
 -위기와 재정관리  
 -직원 협업  
-
-이런것들이 다 뻔하고 좋은 말 같아 보이지만 이걸 구체적으로 제시하면 면접 때나 이력서에 쓸 수 있는 말들 입니다.
 
 **2. 빅데이터 구축 목표**
 
@@ -116,12 +103,12 @@ veracity
 
 **1. 빅데이터 수집방법 WHAT**
 
-로그데이터가 중요.
+로그데이터가 중요
 
     * 웹컨텐츠: 웹서칭을 통해
     * SNS API: 페이스북
     * LBSNS API: 위치데이터
-    * 공공DB: 다양한 데이터의 포맷을 긁어오시면 됩니다.
+    * 공공DB: 다양한 데이터의 포맷을 긁어오시면 된다.
     * Import data: 내가 직접 입력
 
     * 비즈니스 트렌젝션
@@ -130,8 +117,6 @@ veracity
     * SNS
     * 센서
     * 일정관리, 위치정보
-
-비즈니스 모델을 이를 통해서 찾는거죠.
 
 **2. 빅데이터 수집방법 HOW**
 
@@ -146,7 +131,7 @@ veracity
 * 올바른 마케팅시지로 프로파일 조정
     - 판매 타이밍(여름에 슬리퍼를 파는걸 당연시 생각하시는데 이걸 결정하는게 굉장히 중요한 겁니다)
 
-나이키의 경쟁상대는 아디다스가 아니라 닌텐도
+나이키의 경쟁상대는 아디다스가 아니라 닌텐도, 술
 
 밀크쉐이크 바나나
 
@@ -187,7 +172,9 @@ veracity
     - 인포그래픽
 
 * 시간 
-    - time line(motion)
+    - time line(motion)  
+    x축은 시간 y축은 값
+
 * 분포
     - Bubble Chart / 점분포
     - 등고선 / Heat Map
@@ -201,8 +188,31 @@ veracity
 
 ---
 
-[관심있게 봐볼만 한 기업 - 엔서치마케팅](http://nsm.co.kr/nsm_/news/201603/N_SEARCH_MARKETING_2016.pdf)
-
-[네이버 채용 공고 7/5까지](http://www.jobkorea.co.kr/Recruit/GI_Read/21550535?Oem_Code=C1&rPageCode=PL&cmpid=vm_viral_bebettergirls)
-
 [강사님 특강](http://edu.kosta.or.kr/clazzregister/clazzRegister_findClazzWithContents?clazz.clazzId=2968)
+
+---
+
+* 관계
+    - 소셜그래프  
+    페이스북과 트위터가 발판이 되어 네트워킹 설계 발전
+
+* 비교
+    - Matrix(1,2,3,4사분면)
+    - Treemapping
+* 공간
+    - Bobble Chart
+    - Heat Map
+
+**3. 빅데이터 시각화 툴**
+
+[인포그래픽, 시각화 저작툴](https://infogram.com)  
+[정보 시각화](https://www.visualizefree.com/)  
+[소셜 그래프 시각화](http://mentionmapp.com/)  
+[검색기반 시각화](http://www.wolframalpha.com/)  
+[정보 시각화](https://ourworldindata.org)  
+[오픈소스기반 Map시각화저작툴](http://leafletjs.com/)  
+[오픈소스기반 시각화저작툴](https://d3js.org/)  
+[tableau](https://www.tableau.com)  
+[gephi](https://gephi.org/)  
+
+>### 빅데이터 기획을 위한 UI디자인
