--- a/빅데이터 활용안.md
+++ b/빅데이터 활용안.md
@@ -1,9 +1,8 @@
 # 빅데이터 활용안
-## 빅데이터 현황 및 트렌드
 
 ---
 
-> ### 빅데이터 현황 및 트렌드
+> ## 빅데이터 현황 및 트렌드
 
 **1. 빅데이터 기술수준**
 
@@ -60,7 +59,7 @@ RDB(oracle, mySQL)을 거쳐야
 
 ---
 
-> ### 빅데이터 구축목적과 목표
+> ## 빅데이터 구축목적과 목표
 
 volume
 velocity
@@ -99,7 +98,7 @@ veracity
 
 ---
 
-> ### 빅데이터 접근 방법론 및 알고리즘
+> ## 빅데이터 접근 방법론 및 알고리즘
 
 **1. 빅데이터 수집방법 WHAT**
 
@@ -153,7 +152,7 @@ veracity
 
 ---
 
-> ### 빅데이터 분석 및 활용을 위한 시각화
+> ## 빅데이터 분석 및 활용을 위한 시각화
 
 **1. 빅데이터 시각화의 필요성**
 
@@ -215,4 +214,4 @@ veracity
 [tableau](https://www.tableau.com)  
 [gephi](https://gephi.org/)  
 
->### 빅데이터 기획을 위한 UI디자인
+>## 빅데이터 기획을 위한 UI디자인
