--- a/빅데이터 활용안.md
+++ b/빅데이터 활용안.md
@@ -1,8 +1,9 @@
 # 빅데이터 활용안
+## 빅데이터 현황 및 트렌드
 
 ---
 
-> ## 빅데이터 현황 및 트렌드
+> ### 빅데이터 현황 및 트렌드
 
 **1. 빅데이터 기술수준**
 
@@ -59,7 +60,7 @@ RDB(oracle, mySQL)을 거쳐야
 
 ---
 
-> ## 빅데이터 구축목적과 목표
+> ### 빅데이터 구축목적과 목표
 
 volume
 velocity
@@ -98,7 +99,7 @@ veracity
 
 ---
 
-> ## 빅데이터 접근 방법론 및 알고리즘
+> ### 빅데이터 접근 방법론 및 알고리즘
 
 **1. 빅데이터 수집방법 WHAT**
 
@@ -152,7 +153,7 @@ veracity
 
 ---
 
-> ## 빅데이터 분석 및 활용을 위한 시각화
+> ### 빅데이터 분석 및 활용을 위한 시각화
 
 **1. 빅데이터 시각화의 필요성**
 
@@ -214,4 +215,18 @@ veracity
 [tableau](https://www.tableau.com)  
 [gephi](https://gephi.org/)  
 
->## 빅데이터 기획을 위한 UI디자인
+>### 빅데이터 기획을 위한 UI디자인
+
+**1. 정보시각화 디자인**
+
+* 정보를 보다 구체적이고 명료하게 전달하는 역할로 보다 분명하게 문맥과 프로세스를 사용자에게 전달  
+* 운영체제가 제공하는 폰트를 선택하는 것이 명료함이나 가독성에서 가장 좋으며 한 서비스 화면에서는 하나의 폰트만을 사용한다.  
+* 일반적으로 테이블에 사용하는 텍스트는 색과 굵기(Bold)로 변화를 주며, 정보를 구분하거나 강조할 텍스트만 다른 색으로 구성하여 시각적 효과를 높인다.  
+* 타이포그래피보다 더 중요한 디자인적 요소는 문맥(Context)이다. 뛰어난 감각과 깊이 있는 문장을 만드는 것은 사용자와의 의사소통을 향상시킨다.  
+* 데이터의 이름이나 크기를 나타낼 경우 텍스트는 데이터 포인트 바로 옆에 사용한다.
+
+---
+
+맛집 추천 어플의 문제점 : 맛집 검색했는데 버거킹이 나옴.  
+영화 추천: 장르만 있는게 아니라 감독, 배우, 다른 사용자들이 본 작품, 흥행도 등등이 있을 수 있다.  
+되게 상식적인 부분으로만 하면 빅데이터가 의미가 없다. 독창적이고 창의적이어야 한다.
