--- a/빅데이터 활용안.md
+++ b/빅데이터 활용안.md
@@ -2,7 +2,7 @@
 
 ---
 
-> ## 빅데이터 현황 및 트렌드
+##**빅데이터 현황 및 트렌드**
 
 **1. 빅데이터 기술수준**
 
@@ -19,7 +19,11 @@
 빅데이터는 로그데이터를 많이 이야기  
 이 사람이 몇 시에 얼마나 접속하느냐 이런게 예전엔 중요하지 않았는데 지금은 중요 이걸 알아야 기획 구조전략을 짤 수 있다.  
 
+---
+
 <아름다운 시각화>, <정보 디자인 교과서> 
+
+---
 
 R로 분석을 마치고,  
 RDB(oracle, mySQL)을 거쳐야  
@@ -57,7 +61,7 @@ RDB(oracle, mySQL)을 거쳐야
     - 챗봇
     - 음성인식
 
-> ## 빅데이터 구축목적과 목표
+##**빅데이터 구축목적과 목표**
 
 volume
 velocity
@@ -94,7 +98,7 @@ veracity
     - 안정적이거나 기대를 넘는 구매 솔루션 준비
     - 브랜드 지지의 인지와 이탈 방지, 주도적이 되는 행동예측(여러분 빅데이터를 어떻게 이용해서 이탈을 방지할까요? 이 사람이 왜 이탈하는지를 분석하는거죠)
 
-> ## 빅데이터 접근 방법론 및 알고리즘
+##**빅데이터 접근 방법론 및 알고리즘**
 
 **1. 빅데이터 수집방법 WHAT**
 
@@ -126,9 +130,13 @@ veracity
 * 올바른 마케팅시지로 프로파일 조정
     - 판매 타이밍(여름에 슬리퍼를 파는걸 당연시 생각하시는데 이걸 결정하는게 굉장히 중요한 겁니다)
 
+---
+
 나이키의 경쟁상대는 아디다스가 아니라 닌텐도, 술
 
 밀크쉐이크 바나나
+
+---
 
 **3. 빅데이터를 이용한 알고리즘**
 
@@ -146,7 +154,7 @@ veracity
 [구글 트랜드](https://trends.google.com/trends/)  
 [네이버 데이터랩 카드소비](http://datalab.naver.com/local/card.naver)
 
-> ## 빅데이터 분석 및 활용을 위한 시각화
+##**빅데이터 분석 및 활용을 위한 시각화**
 
 **1. 빅데이터 시각화의 필요성**
 
@@ -208,7 +216,7 @@ veracity
 [tableau](https://www.tableau.com)  
 [gephi](https://gephi.org/)  
 
->## 빅데이터 기획을 위한 UI디자인
+##**빅데이터 기획을 위한 UI디자인**
 
 **1. 정보시각화 디자인**
 
