--- a/빅데이터 활용안.md
+++ b/빅데이터 활용안.md
@@ -3,9 +3,9 @@
 
 # 빅데이터 활용안
 
-## **빅데이터 현황 및 트렌드**
+## **1. 빅데이터 현황 및 트렌드**
 
-**1. 빅데이터 기술수준**
+**빅데이터 기술수준**
 
 * 저장 기술
 * 분석 기술(이제 여기서부터가 기획부분에서 사용)  
@@ -24,7 +24,7 @@ R로 분석을 마치고,
 RDB(oracle, mySQL)을 거쳐야  
 최종단으로 데이터를 시각화하고 정용 가능.
 
-**2. 빅데이터 이용현황**
+**빅데이터 이용현황**
 
 * 하둡 그 이상의 빅데이터  
 -하둡에서 스파크로 옮겨지고 있다.
@@ -38,7 +38,7 @@ RDB(oracle, mySQL)을 거쳐야
 -기계학습(머신러닝): 사람이 수작업으로 몇십만개 정보를 입력하는게 아니라 기계가 학습하게 하여 정보를 스스로 입력하게 하는 방식  
 -IoT데이터, 대화형 시스템
 
-**3. 2017년 기술트렌드**
+**2017년 기술트렌드**
 
 * 인공지능(A.I)  
     - 패턴 인식
@@ -56,14 +56,14 @@ RDB(oracle, mySQL)을 거쳐야
     - 챗봇
     - 음성인식
 
-## **빅데이터 구축목적과 목표**
+## **2. 빅데이터 구축목적과 목표**
 
 volume
 velocity
 variety
 veracity  
 
-**1. 빅데이터 구축 목적**
+**빅데이터 구축 목적**
 
 * 더 나은 의사결정
 * 사용자 중심의 서비스 활동
@@ -76,7 +76,7 @@ veracity
 -위기와 재정관리  
 -직원 협업  
 
-**2. 빅데이터 구축 목표**
+**빅데이터 구축 목표**
 
 * Increase Sales Revenue  
 고객 타겟팅 및 세분화를 개선하기 위해 인구 통계학적 및 행동 데이터의 조합 사용(데이터를 바껭서 땡겨와야 합니다)
@@ -93,9 +93,9 @@ veracity
     - 안정적이거나 기대를 넘는 구매 솔루션 준비
     - 브랜드 지지의 인지와 이탈 방지, 주도적이 되는 행동예측(여러분 빅데이터를 어떻게 이용해서 이탈을 방지할까요? 이 사람이 왜 이탈하는지를 분석하는거죠)
 
-## **빅데이터 접근 방법론 및 알고리즘**
+## **3. 빅데이터 접근 방법론 및 알고리즘**
 
-**1. 빅데이터 수집방법 WHAT**
+**빅데이터 수집방법 WHAT**
 
 로그데이터가 중요
 
@@ -112,7 +112,7 @@ veracity
     * 센서
     * 일정관리, 위치정보
 
-**2. 빅데이터 수집방법 HOW**
+**빅데이터 수집방법 HOW**
 
 * 데이터의 키 소스 정의
     - 업무적/행동적
@@ -125,7 +125,7 @@ veracity
 * 올바른 마케팅시지로 프로파일 조정
     - 판매 타이밍(여름에 슬리퍼를 파는걸 당연시 생각하시는데 이걸 결정하는게 굉장히 중요한 겁니다)
 
-**3. 빅데이터를 이용한 알고리즘**
+**빅데이터를 이용한 알고리즘**
 
 어떠한 문제를 해결하기 위한 여러 동작들의 유한한 모임  
 패턴을 이용해 미래를 예측
@@ -141,14 +141,14 @@ veracity
 [구글 트랜드](https://trends.google.com/trends/)  
 [네이버 데이터랩 카드소비](http://datalab.naver.com/local/card.naver)
 
-## **빅데이터 분석 및 활용을 위한 시각화**
+## **4. 빅데이터 분석 및 활용을 위한 시각화**
 
-**1. 빅데이터 시각화의 필요성**
+**빅데이터 시각화의 필요성**
 
 방대하고 변화가 빠른 스트리밍형 비정형 데이터의 인사이트를 도출하고 서
 비스를 구현하기 위해
 
-**2. 빅데이터 시각화의 종류**
+**빅데이터 시각화의 종류**
 
 시간, 분포, 관계, 비교, 공간
 
@@ -179,7 +179,7 @@ veracity
     - Bobble Chart
     - Heat Map
 
-**3. 빅데이터 시각화 툴**
+**빅데이터 시각화 툴**
 
 [인포그래픽, 시각화 저작툴](https://infogram.com)  
 [정보 시각화](https://www.visualizefree.com/)  
@@ -191,9 +191,9 @@ veracity
 [tableau](https://www.tableau.com)  
 [gephi](https://gephi.org/)  
 
-## **빅데이터 기획을 위한 UI디자인**
+## **5. 빅데이터 기획을 위한 UI디자인**
 
-**1. 정보시각화 디자인**
+**정보시각화 디자인**
 
 * 정보를 보다 구체적이고 명료하게 전달하는 역할로 보다 분명하게 문맥과 프로세스를 사용자에게 전달  
 * 운영체제가 제공하는 폰트를 선택하는 것이 명료함이나 가독성에서 가장 좋으며 한 서비스 화면에서는 하나의 폰트만을 사용한다.  
@@ -203,20 +203,18 @@ veracity
 
 ---
 
-나이키의 경쟁상대는 아디다스가 아니라 닌텐도, 술
+>나이키의 경쟁상대는 아디다스가 아니라 닌텐도, 술
 
-밀크쉐이크 바나나
+>밀크쉐이크 바나나
 
-맛집 추천 어플의 문제점 : 맛집 검색했는데 버거킹이 나옴.  
-영화 추천: 장르만 있는게 아니라 감독, 배우, 다른 사용자들이 본 작품, 흥행도 등등이 있을 수 있다.  
-되게 상식적인 부분으로만 하면 빅데이터가 의미가 없다. 독창적이고 창의적이어야 한다.
+>맛집 추천 어플의 문제점 : 맛집 검색했는데 버거킹이 나옴.  
+>영화 추천: 장르만 있는게 아니라 감독, 배우, 다른 사용자들이 본 작품, 흥행도 등등이 있을 수 있다.  
+>되게 상식적인 부분으로만 하면 빅데이터가 의미가 없다. 독창적이고 창의적이어야 한다.
 
-<아름다운 시각화>, <정보 디자인 교과서> 
+><아름다운 시각화>, <정보 디자인 교과서> 
 
----
-
-[비주얼라이즈프리](https://www.visualizefree.com/)
-
-[15분짜리 강의](https://www.udemy.com/)
-
-[강사님 특강](http://edu.kosta.or.kr/clazzregister/clazzRegister_findClazzWithContents?clazz.clazzId=2968)
+>[비주얼라이즈프리](https://www.visualizefree.com/)
+>
+>[15분짜리 강의](https://www.udemy.com/)
+>
+>[강사님 특강](http://edu.kosta.or.kr/clazzregister/clazzRegister_findClazzWithContents?clazz.clazzId=2968)
